MDEV-6577 auth_socket.so does not build in kFreeBSD

if it has to be a mess of ifdefs, then mess of ifdefs it is